--- a/todo-list/src/App.css
+++ b/todo-list/src/App.css
@@ -47,7 +47,6 @@
     list-style: none;
     display: flex;
     flex-direction: column;
-    gap: 30px;
     margin-bottom: 20px;
  
 }
@@ -67,5 +66,8 @@
     padding:10px ;
    
 }
-
+.remove-btn{
+    margin-left: 300px;
+    position: fixed;
+}
 
