--- a/student-form/src/App.css
+++ b/student-form/src/App.css
@@ -1,4 +1,4 @@
-/* StudentForm.css */
+
 body{
     background-color: #C3E2C2;
 }
@@ -15,26 +15,28 @@ img{
 
 .form-container {
     display: flex;
-    
-    /* justify-content: space-between; */
+   margin: 20px;
     gap: 200px;
   }
   
   .form2-container {
-    width: 45%; /* Adjust the width as needed */
+    width: 50%; 
     
   }
   
   .label {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     margin-bottom: 10px;
   }
   
   .input-field {
-    width: 100%;
+    width: 100;
     padding: 8px;
     margin-bottom: 10px;
     box-sizing: border-box;
+    border-radius: 10px;
   }
   
   .button-container {
@@ -48,9 +50,10 @@ img{
     color: #fff;
     border: none;
     cursor: pointer;
+    border-radius: 10px;
   }
   
-  /* Additional styles for checkboxes */
+ 
   .checkbox-container {
     display: flex;
     align-items: center;
@@ -60,59 +63,91 @@ img{
     margin-right: 10px;
   }
   
-  /* Style for file input */
+ 
   .file-input {
     margin-bottom: 10px;
     height: 100px;
   }
 
 
-.data-container {
+
+
+.all-data-container{
     display: flex;
-
-    gap: 100px;
-    width: 45%; /* Adjust the width as needed */
+    flex-wrap: wrap;
+    gap: 20px;
+}
+.data-container{
+    width: 200px;
+    display: flex;
+   
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    border: 2px solid #ddd;
     height: fit-content;
-    padding: 10px;
-    margin-top: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-    background-color: #fff;
+    font-size: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: white;
   }
-  
-  .data-img {
-    /* max-width: 100%; */
-    border-radius: 8px;
-    /* margin-bottom: 10px; */
-  }
-  
-  .data-container h2 {
-    font-size: 1.5rem;
-    /* margin-bottom: 2px; */
-  }
-  
+ .data-details{
+    display: flex;
+ 
+    flex-direction: column;
+    margin: 20px;
+ 
+    justify-content: center;
+    margin-left: 40px;
+ }
+ .list-container{
+    display: flex;
+    gap: none;
+    
 
-  .data-container ul {
+ }
+ .list-container {
+    display: flex;
+    gap: 8px;
+   
+  }
+  
+  .list-container span {
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+  
+  .list-container ul {
+    display: flex;
+    gap: 10px;
     list-style-type: none;
     padding: 0;
+    margin: 0;
   }
   
-  .data-container li {
-    margin-bottom: 2px;
+  .list-container li {
+    margin-bottom: 5px;
   }
- 
+  
   
   /* Responsive styles for smaller screens */
-  @media (max-width: 768px) {
+  @media screen and (min-width: 600px) {
     .form-container {
-      flex-direction: column;
+      flex-direction: row;
     }
   
     .form2-container {
-      width: 100%;
+      width: 45%;
     }
-    .data-container {
-        width: 100%;
-      }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .form-container {
+      flex-direction: row;
+    }
+  
+    .form2-container {
+      width: 40%;
+    }
   }
   
