--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -1,17 +1,28 @@
+body{
+    background-image: url('https://plus.unsplash.com/premium_photo-1680721444874-6b52aa31e26c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGNhbGN1bGF0b3J8ZW58MHx8MHx8fDA%3D');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    /* height: 100vh;  */
+    position: static;
+    font-family: digital, sans-serif;
+
+
+ 
+}
 .calci{
 
-    background: rgba(255, 255, 255, 0.28);
-    border-radius: 16px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-    border: 1px solid rgba(255, 255, 255, 1);
     width: 320px;
     margin: 30px auto;
+    color: rgb(99, 97, 97);
 }
+
 h1{
     text-align: center;
     font-size: 50px;
+    color: rgb(74, 73, 73);
 }
 #answer{
     background-color: #e2e2e2;
@@ -29,12 +40,30 @@ h1{
     background: #333;
     height: 80px;
     width: 80px;
-    color: white;
+    color: black;
     font-size: 30px;
     border: 1px solid black;
     border-radius: 16px;
+    background: rgba(96, 94, 94, 0.16);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 1);
+    cursor: pointer;
+}
+.btn:hover{
+    background-color: #9FBB73;
+
 }
 
 .btn1{
-    width: 160px;
+    width: 100px
+}
+#btn2{
+    background-color: #2D9596;
+    width: 120px
+}
+#btn2:hover{
+    background-color: #9FBB73;
 }
