--- a/calculator/src/index.css
+++ b/calculator/src/index.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #5c5b5b;
+  /* color: rgba(255, 255, 255, 0.87); */
+  /* background-color: #5c5b5b; */
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
